--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -49,6 +49,7 @@ nvim_filetype_dir: "{{ nvim_config_dir }}/ftdetect"
 nvim_syntax_dir: "{{ nvim_config_dir }}/syntax"
 nvim_filetype_settings_dir: "{{ nvim_config_dir }}/ftplugin"
 nvim_projects_dir: "{{ xdg_config_dir }}/projects-config"
+nvim_neorg_dir: "{{ dotfiles_user_home }}/OrgNotes"
 nvim_shell_cmd: "zsh"
 nvim_shell: "{{ nix_bin }}/{{ nvim_shell_cmd }}"
 nvim_custom_filetypes: {}
