[Zsh] Cleanup commands.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -35,6 +35,7 @@ homelab_dir: "{{ code_checkout_path_github }}/homelab"
 dotfiles_checkout_dir: "{{ code_checkout_path_github }}/role.nix-dot"
 xdg_config_dir_navi: "{{ xdg_share_dir }}/navi"
 xdg_config_dir_navi_cheats: "{{ xdg_config_dir_navi }}/cheats"
+nvim_exe: "{{ nix_bin }}/nvim"
 nvim_share_dir: "{{ xdg_share_dir }}/nvim"
 nvim_vim_plug_dir: "{{ nvim_share_dir }}/site/autoload"
 nvim_plugged_dir: "{{ nvim_share_dir }}/plugged"
