--- a/tasks/install_zellij.yml
+++ b/tasks/install_zellij.yml
@@ -16,14 +16,14 @@
     state: directory
     mode: '0755'
 
-- name: Zellij | Copies Zellij Layout Configs | template
+- name: Zellij | Copies Zellij Default Layouts | template
   template:
     src: '{{ item.src }}'
     dest: "{{ zellij_layout_dir }}/{{ item.path  | regex_replace('\\.j2$', '') }}"
   with_filetree: '../templates/zellij/layouts'
   when: item.state == 'file'
 
-- name: Zellij | Copies Zellij Layout Configs | template
+- name: Zellij | Copies Zellij User Layouts | template
   vars:
     zellij_session_info: "{{ item.value.zellij_session }}"
     zellij_template_info: "{{ item.value.zellij_template }}"
@@ -32,3 +32,10 @@
     src: zellij/layouts-template/layout.yaml.j2
     dest: "{{ zellij_layout_dir }}/{{ item.value.name  | regex_replace('\\.j2$', '') }}.yaml"
   loop: "{{ zellij_layouts | dict2items }}"
+
+- name: Zellij | Copies Zellij Default Themes | template
+  template:
+    src: '{{ item.src }}'
+    dest: "{{ zellij_themes_dir }}/{{ item.path  | regex_replace('\\.j2$', '') }}"
+  with_filetree: '../templates/zellij/themes'
+  when: item.state == 'file'
