--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -64,7 +64,7 @@ extra_lua_plugin_settings: []
 extra_bookmarks: []
 lsp_providers: []
 lsp_providers_luafile: "{{ \"'\" + lsp_providers | join(\"', '\") + \"'\" }}"
-lsp_providers_file: "{{ (lsp_providers_luafile != '') | ternary('-- No Additional Servers Preconfigured', lsp_providers_luafile) }}"
+lsp_providers_file: "{{ (lsp_providers_luafile != '') | ternary(lsp_providers_luafile, '-- No Additional Servers Preconfigured') }}"
 lsp_providers_plugins: []
 lsp_providers_setup: []
 treesitter_parsers: []
