--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -95,6 +95,9 @@ lsp_provider_coc_settings_languageserver:
   languageserver: "{{ lsp_provider_coc_settings }}"
 lsp_provider_coc_settings_merged: "{{ lsp_provider_coc_settings_base | combine(lsp_provider_coc_settings_languageserver) }}"
 lsp_provider_coc_settings_json: "{{ lsp_provider_coc_settings_merged | to_nice_json }}"
+helix_config_dir: "{{ xdg_config_dir }}/helix"
+helix_config_file: "{{ helix_config_dir }}/config.toml"
+helix_lang_file: "{{ helix_config_dir }}/languages.toml"
 ranger_config: "{{ xdg_config_dir }}/ranger"
 ranger_plugins: "{{ ranger_config }}/plugins"
 lazygit_config: "{{ xdg_config_dir }}/lazygit"
