[Neovim] Check that packer is installed.

--- a/tasks/install_neovim.yml
+++ b/tasks/install_neovim.yml
@@ -10,9 +10,15 @@
     src: nvim/init.lua.j2
     dest: "{{ nvim_init_lua }}"
 
+- name: Neovim | Check if Packer is Installed | stat
+  stat:
+    path: "{{ nvim_packer_dir }}"
+  register: packer_installed
+
 - name: Install Neovim Plugins(Packer)
   changed_when: false
   shell: "{{ nix_bin }}/nix-shell --command \"zsh\" -p gcc && {{ nix_bin }}/nvim --headless -c 'autocmd User PackerComplete quitall' -c 'PackerSync'"
+  when: packer_installed.stat.exists
 
 - name: Setup Neovim Lua Config Directory
   file:
