--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -37,6 +37,8 @@ xdg_config_dir_navi: "{{ xdg_share_dir }}/navi"
 xdg_config_dir_navi_cheats: "{{ xdg_config_dir_navi }}/cheats"
 nvim_exe: "{{ nix_bin }}/nvim"
 nvim_share_dir: "{{ xdg_share_dir }}/nvim"
+nvim_packer_reldir: "site/pack/packer/start/packer.nvim"
+nvim_packer_dir: "{{ nvim_share_dir }}/{{ nvim_packer_reldir }}"
 nvim_vim_plug_dir: "{{ nvim_share_dir }}/site/autoload"
 nvim_plugged_dir: "{{ nvim_share_dir }}/plugged"
 nvim_config_dir: "{{ xdg_config_dir }}/nvim"
