[Joplin] Add joplin config.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -35,6 +35,8 @@ homelab_dir: "{{ code_checkout_path_github }}/homelab"
 dotfiles_checkout_dir: "{{ code_checkout_path_github }}/role.nix-dot"
 xdg_config_dir_navi: "{{ xdg_share_dir }}/navi"
 xdg_config_dir_navi_cheats: "{{ xdg_config_dir_navi }}/cheats"
+joplin_exe: "{{ nix_bin }}/joplin"
+joplin_config_dir: "{{ xdg_config_dir }}/joplin"
 nvim_exe: "{{ nix_bin }}/nvim"
 nvim_share_dir: "{{ xdg_share_dir }}/nvim"
 nvim_packer_reldir: "site/pack/packer/start/packer.nvim"
