--- a/tasks/install_joplin.yml
+++ b/tasks/install_joplin.yml
@@ -1,6 +1,8 @@
 ---
 - name: Joplin | Set File Sync | command
+  changed_when: false
   command: "{{ joplin_exe }} config sync.target 2"
 
 - name: Joplin | Set File Sync Directory | command
+  changed_when: false
   command: "{{ joplin_exe }} config sync.2.path {{ nvim_neorg_dir }}"
