--- a/tasks/install_joplin.yml
+++ b/tasks/install_joplin.yml
@@ -2,7 +2,7 @@
 - name: Joplin | Copies Joplin Keybindings | template
   template:
     src: joplin/joplin-keymap.json.j2
-    dest: "{{ joplin_config_dir }}/joplin-keymap.json"
+    dest: "{{ joplin_config_dir }}/keymap.json"
 
 - name: Joplin | Set File Sync | command
   changed_when: false
@@ -11,3 +11,7 @@
 - name: Joplin | Set File Sync Directory | command
   changed_when: false
   command: "{{ joplin_exe }} config sync.2.path {{ nvim_neorg_dir }}"
+
+- name: Joplin | Set Editor | command
+  changed_when: false
+  command: "{{ joplin_exe }} config editor \"{{ nvim_exe }}\""
