[Neovim] Add extra lua settings.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -68,6 +68,8 @@ language_neovim_plugins: []
 ale_plugin_settings: []
 neoformat_plugin_settings: []
 dap_plugin_settings: []
+extra_nvim_lua_settings: []
+extra_nvim_vimscript_settings: []
 extra_plugin_settings: []
 extra_lua_plugin_settings: []
 extra_bookmarks: []
