--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -79,12 +79,14 @@ lsp_providers_file: "{{ (lsp_providers_luafile != '') | ternary(lsp_providers_lu
 lsp_providers_plugins: []
 lsp_providers_setup: []
 treesitter_parsers: []
+treesitter_extra_config: []
 lsp_provider_file: "{{ '''' + lsp_providers |join(''', ''') + '''' }}"
 lsp_provider_plugins_file: "{{ lsp_providers_plugins | join('\n') }}"
 lsp_provider_lspconfig_setup_file: "{{ lsp_providers_setup | join('\n') }}"
 lsp_provider_neovim_plugins_file: "{{ lsp_provider_neovim_plugins | join('\n') }}"
 language_neovim_plugins_file: "{{ language_neovim_plugins | join('\n') }}"
 treesitter_parsers_file: "{{ '\"' + treesitter_parsers |join('\", \"') + '\"' }}"
+treesitter_extra_config_file: "{{ treesitter_extra_config | join('\n') }}"
 ale_plugin_settings_file: "{{ ale_plugin_settings | join('\n') }}"
 neoformat_plugin_settings_file: "{{ neoformat_plugin_settings | join('\n') }}"
 dap_plugin_settings_file: "{{ dap_plugin_settings | join('\n') }}"
