--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -108,6 +108,7 @@ lsp_provider_coc_settings_languageserver:
   languageserver: "{{ lsp_provider_coc_settings }}"
 lsp_provider_coc_settings_merged: "{{ lsp_provider_coc_settings_base | combine(lsp_provider_coc_settings_languageserver) }}"
 lsp_provider_coc_settings_json: "{{ lsp_provider_coc_settings_merged | to_nice_json }}"
+nvim_test_enable: false
 helix_config_dir: "{{ xdg_config_dir }}/helix"
 helix_config_file: "{{ helix_config_dir }}/config.toml"
 helix_lang_file: "{{ helix_config_dir }}/languages.toml"
