--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -53,7 +53,7 @@ nvim_coc_settings_file: "{{ nvim_config_dir }}/coc-settings.json"
 nvim_filetype_dir: "{{ nvim_config_dir }}/ftdetect"
 nvim_syntax_dir: "{{ nvim_config_dir }}/syntax"
 nvim_filetype_settings_dir: "{{ nvim_config_dir }}/ftplugin"
-nvim_projects_dir: "{{ xdg_config_dir }}/projects-config"
+nvim_projects_dir: "{{ xdg_config_dir }}/nvim/projects"
 nvim_neorg_dir: "{{ dotfiles_user_home }}/OrgNotes"
 nvim_shell_cmd: "zsh"
 nvim_shell: "{{ nix_bin }}/{{ nvim_shell_cmd }}"
