[Helix] Add task title.

--- a/tasks/install_helix.yml
+++ b/tasks/install_helix.yml
@@ -1,5 +1,5 @@
 ---
-- name: Setup Helix Config Directory
+- name: Helix | Setup Helix Config Directory | template
   file:
     path: "{{ helix_config_dir }}"
     state: directory
