--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -149,6 +149,7 @@ tmux_plugin_dir: "{{ dotfiles_user_home }}/.tmux/plugins"
 tmux_tpm_dir: "{{ tmux_plugin_dir }}/tpm"
 tmux_tpm_url: https://github.com/tmux-plugins/tpm
 tmux_keybindings_file: "{{ tmux_config_dir }}/keybindings.conf"
+zellij_shell: "{{ nvim_shell }}"
 zellij_config_dir: "{{ xdg_config_dir }}/zellij"
 zellij_config_file: "{{ zellij_config_dir }}/config.yaml"
 zellij_themes_dir: "{{ zellij_config_dir }}/themes"
