--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -201,3 +201,20 @@ zellij_layouts:
 zellij_session_info: "{{ zellij_layouts.example.zellij_session }}"
 zellij_template_info: "{{ zellij_layouts.example.zellij_template }}"
 zellij_tab_info: "{{ zellij_layouts.example.zellij_tabs }}"
+zellij_kdl_layouts:
+  example:
+    name: dev1
+    layout_info:
+      - "tab name=\"main tab\" split_direction=\"vertical\" focus=true cwd=\"{{ dotfiles_user_home }}\" {"
+      - "    pane"
+      - "    pane {"
+      - "        command=\"{{ nvim_exe }}\""
+      - "        cwd=\"{{ xdg_config_dir }}\""
+      - "    }"
+      - "}"
+      - "tab name=\"second tab\" cwd=\"{{ xdg_config_dir }}\" {"
+      - "    pane {"
+      - "        command=\"{{ nvim_exe }}\""
+      - "        cwd=\"{{ xdg_config_dir }}\""
+      - "    }"
+      - "}"
