[Zellij] Fix syntax.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -209,13 +209,13 @@ zellij_kdl_layouts:
       - "tab name=\"main tab\" split_direction=\"vertical\" focus=true cwd=\"{{ dotfiles_user_home }}\" {"
       - "    pane"
       - "    pane {"
-      - "        command=\"{{ nvim_exe }}\""
-      - "        cwd=\"{{ xdg_config_dir }}\""
+      - "        command \"{{ nvim_exe }}\""
+      - "        cwd \"{{ xdg_config_dir }}\""
       - "    }"
       - "}"
       - "tab name=\"second tab\" cwd=\"{{ xdg_config_dir }}\" {"
       - "    pane {"
-      - "        command=\"{{ nvim_exe }}\""
-      - "        cwd=\"{{ xdg_config_dir }}\""
+      - "        command \"{{ nvim_exe }}\""
+      - "        cwd \"{{ xdg_config_dir }}\""
       - "    }"
       - "}"
